styles/Post.module.css
.post {
    line-height: 1.3;
}

.post h2{
    margin: 1.2rem 0 6px;
    font-size: 28px;
    font-weight: 600;
}

.post h3{
    margin: .8rem 0 3px;
    font-size: 20px;
    font-weight: 500;
}

.post p{
    margin-bottom: 1rem;
    line-height: 1.5;
}

.post ul{
    list-style-type: disc;
    margin-top: -0.5rem;
}

.post ol{
    list-style-type: decimal;
    margin-top: -0.5rem;
}

.post li{
    margin-left: 2rem;
    margin-bottom: 4px;
}

.post code{
    display: block;
    padding: 1rem;
    margin: 0.5rem 0;
    background-color: #DDF7F8;
    border-radius: 7px;
}

@media only screen and (max-width: 600px){
    .post h2{
        font-size: 23px;
        text-align: center;
    }
    
    .post h3{
        font-size: 17px;
        text-align: center;
    }
}

